--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Kaushan Script', cursive;
   line-height: 1.5;
   font-weight: 400;
 
@@ -29,41 +29,68 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: rgb(255, 255, 255);
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(147, 166, 187, 1) 100%
+  );
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 4em;
   line-height: 1.1;
+  font-family: 'Kaushan Script', cursive;
+  color: #3f51b5;
+  text-shadow: #7d7d7d 1px 1px 2px;
+  margin: 40px;
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 20px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 50px 20px;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  font-family: 'Montserrat Alternates', sans-serif;
+  text-transform: uppercase;
+  text-shadow: #7d7d7d 1px 1px 2px;
+  background-color: #3f51b5b3;
+  color: white;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  box-shadow: 2px 1px 1px #7c7c7c;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.contact-image {
+  width: 80px;
+  border-radius: 0% 40%;
+}
+
+table {
+  table-layout: fixed;
+}
+
+th,
+td {
+  padding: 10px;
+  width: 15%;
+}
+
+th {
+  color: #3f51b5b3;
+  text-shadow: #6c6c6c 1px 1px 2px;
+  text-transform: uppercase;
+}
+
+td {
+  color: #3f51b5b3;
+}
+
+.contact-name {
+  font-family: 'Dancing Script', cursive;
+  font-size: 1.5em;
 }
